Basic layout and styles
- add basic html layout.
- define placeholder styles to reference work.

--- a/index.html
+++ b/index.html
@@ -1,19 +1,143 @@
 <!DOCTYPE html>
 <html>
-    <head>
-      <title>Example</title>
-      <meta name="viewport" content="width=device-width, initial-scale=1">
-      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-      <link href="assets/styles/main.css"rel="stylesheet" type="text/css">
-      <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-      <script src="assets/scripts/index.js" type="text/javascript" charset="utf-8" defer></script>
-    </head>
-    <body class="container-fluid">
 
+<head>
+  <title>Matthew J. Montalto</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-      <!-- bootstrap scripting libraries -->
-      <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    </body>
+  <!-- bootstrap css -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
+  <!-- natice styles -->
+  <link href="assets/styles/main.css" rel="stylesheet" type="text/css">
+
+  <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+  <script src="assets/scripts/index.js" type="text/javascript" charset="utf-8" defer></script>
+</head>
+
+<body>
+  <nav>
+    <nav class="navbar navbar-expand-lg sticky-top navbar-light bg-light">
+      <a class="navbar-brand">Matthew J. Montalto</a>
+      <div class="d-flex justify-content-end">
+        <a class="navbar-nav mr-2 p-2" href="#skills">Skills</a>
+        <a class="navbar-nav mr-2 p-2" href="#projects">Projects</a>
+        <a class="navbar-nav mr-2 p-2" href="#resume">Resume</a>
+        <a class="navbar-nav mr-2 p-2" href="#contact">Contact</a>
+      </div>
+    </nav>
+  </nav>
+  <header class="container">
+    <!-- hero img and name -->
+    <div class="row justify-content-center">
+      <div class="hero">
+        <div class="hero-image">
+          <img src="" alt="">
+        </div>
+        <h1>Matthew J. Montalto</h1>
+        <h2>Software Engineer</h2>
+        <p>Boston, MA</p>
+      </div>
+    </div>
+  </header>
+  <section class="container-fluid about">
+    <article class="row justify-content-center align-items-center">
+      <div class="col-md-6 col-sm-12">
+        <h2>Boston-based Software Engineer</h2>
+        <button class="btn">Download Resume</button>
+      </div>
+      <div class="col-md-6 col-sm-12">
+        <p>
+          I am a software engineer with an eclectic background that spans audio engineering, CRM administration, sales, and marketing. Following a realization that I was seeking out and energized by the most technical aspects of the work I
+          performed, I committed myself to a career where I am able to fully explore my passion for building, creating, and problem-solving.
+        </p>
+        <p>
+          From each role I learned to enjoy collaboration with numerous personalities—how to harness creativity and
+          leverage passionate energy. I was taught to value a well-crafted story and to know when listening with an open mind is most important. I view problems as opportunities and value disciplined optimization. As I look ahead to my career as a
+          software engineer, I see a new opportunity to combine the talents I’ve honed these past years and apply them to developing software that is fun, powerful, useful, and valuable.
+        </p>
+      </div>
+    </article>
+  </section>
+
+  <section class="container-fluid skills">
+    <!-- SKills -->
+    <div class="row">
+      <div class="col titles">
+        <h2>Technologies</h2>
+      </div>
+    </div>
+    <article class="row">
+      <div class="col-md-4 col-sm-12">
+        <h3>Languages and Frameworks</h3>
+      </div>
+      <div class="col-md-4 col-sm-12">
+        <h3>Markup and Style</h3>
+      </div>
+      <div class="col-md-4 col-sm-12">
+        <h3>Data and Web</h3>
+      </div>
+    </article>
+  </section>
+  <section class="container-fluid projects">
+    <div class="row">
+      <div class="col titles">
+        <h2>Projects</h2>
+      </div>
+    </div>
+    <article class="row justify-content-md-center">
+      <div class="col-md-3 col-sm-12 skills">
+        <div class="card" style="width: 18rem;">
+          <img class="card-img-top" src="..." alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title">Tic-Tac-Toe</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <a href="#" class="btn btn-primary">View Project</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-3 col-sm-12 skills">
+        <div class="card" style="width: 18rem;">
+          <img class="card-img-top" src="..." alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title">Hot Sauce Recipe Keeper</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <a href="#" class="btn btn-primary">View Project</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-3 col-sm-12 skills">
+        <div class="card" style="width: 18rem;">
+          <img class="card-img-top" src="..." alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title">Group Project</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <a href="#" class="btn btn-primary">View Project</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-3 col-sm-12 skills">
+        <div class="card" style="width: 18rem;">
+          <img class="card-img-top" src="..." alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title">Capstone Project</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <a href="#" class="btn btn-primary">View Project</a>
+          </div>
+        </div>
+      </div>
+    </article>
+  </section>
+  <section>
+    <!-- contact info -->
+  </section>
+  <footer>
+
+  </footer>
+  <!-- bootstrap scripting libraries -->
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+</body>
+
 </html>
