--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     <div class="row justify-content-center">
       <div class="hero">
         <div class="hero-image">
+          <!-- Hero Image -->
           <img src="" alt="">
         </div>
         <h1>Matthew J. Montalto</h1>
@@ -41,23 +42,28 @@
     </div>
   </header>
   <section class="container-fluid about">
-    <article class="row justify-content-center align-items-center">
-      <div class="col-md-6 col-sm-12">
+    <div class="row justify-content-center">
+      <div class="col titles">
+        <h2>About</h2>
+      </div>
+    </div>
+    <div class="row justify-content-space">
+      <div class="col-md-6 col-sm-12 align-self-center">
         <h2>Boston-based Software Engineer</h2>
         <button class="btn">Download Resume</button>
       </div>
-      <div class="col-md-6 col-sm-12">
-        <p>
+      <div class="col-md-6 col-sm-12 align-self-center">
+        <p class="about-me my-2">
           I am a software engineer with an eclectic background that spans audio engineering, CRM administration, sales, and marketing. Following a realization that I was seeking out and energized by the most technical aspects of the work I
           performed, I committed myself to a career where I am able to fully explore my passion for building, creating, and problem-solving.
         </p>
-        <p>
+        <p class="about-me my-2">
           From each role I learned to enjoy collaboration with numerous personalities—how to harness creativity and
           leverage passionate energy. I was taught to value a well-crafted story and to know when listening with an open mind is most important. I view problems as opportunities and value disciplined optimization. As I look ahead to my career as a
           software engineer, I see a new opportunity to combine the talents I’ve honed these past years and apply them to developing software that is fun, powerful, useful, and valuable.
         </p>
       </div>
-    </article>
+    </div>
   </section>
 
   <section class="container-fluid skills">
@@ -67,7 +73,7 @@
         <h2>Technologies</h2>
       </div>
     </div>
-    <article class="row">
+    <article class="row justify-content-center">
       <div class="col-md-4 col-sm-12">
         <h3>Languages and Frameworks</h3>
       </div>
@@ -85,8 +91,8 @@
         <h2>Projects</h2>
       </div>
     </div>
-    <article class="row justify-content-md-center">
-      <div class="col-md-3 col-sm-12 skills">
+    <article class="row justify-content-around">
+      <div class="col-lg-3 col-md-6 col-sm-12 skills">
         <div class="card" style="width: 18rem;">
           <img class="card-img-top" src="..." alt="Card image cap">
           <div class="card-body">
@@ -96,7 +102,7 @@
           </div>
         </div>
       </div>
-      <div class="col-md-3 col-sm-12 skills">
+      <div class="col-lg-3 col-md-6 col-sm-12 skills">
         <div class="card" style="width: 18rem;">
           <img class="card-img-top" src="..." alt="Card image cap">
           <div class="card-body">
@@ -106,7 +112,7 @@
           </div>
         </div>
       </div>
-      <div class="col-md-3 col-sm-12 skills">
+      <div class="col-lg-3 col-md-6 col-sm-12 skills">
         <div class="card" style="width: 18rem;">
           <img class="card-img-top" src="..." alt="Card image cap">
           <div class="card-body">
@@ -116,7 +122,7 @@
           </div>
         </div>
       </div>
-      <div class="col-md-3 col-sm-12 skills">
+      <div class="col-lg-3 col-md-6 col-sm-12 skills">
         <div class="card" style="width: 18rem;">
           <img class="card-img-top" src="..." alt="Card image cap">
           <div class="card-body">
@@ -128,11 +134,12 @@
       </div>
     </article>
   </section>
-  <section>
-    <!-- contact info -->
-  </section>
-  <footer>
-
+  <footer class="navbar navbar-expand-lg sticky-top navbar-light bg-light">
+    <div class="d-flex justify-content-end">
+      <a class="navbar-nav mr-2 p-2" href="#">LinkedIn</a>
+      <a class="navbar-nav mr-2 p-2" href="#projects">Github</a>
+      <a class="navbar-nav mr-2 p-2" href="#resume">Contact Me</a>
+    </div>
   </footer>
   <!-- bootstrap scripting libraries -->
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
