--- a/index.html
+++ b/index.html
@@ -20,20 +20,20 @@
     <nav class="navbar navbar-expand-lg sticky-top navbar-light bg-light">
       <a class="navbar-brand">Matthew J. Montalto</a>
       <div class="d-flex justify-content-end">
-        <a class="navbar-nav mr-2 p-2" href="#skills">Skills</a>
+        <a class="navbar-nav mr-2 p-2" href="#about">About</a>
+        <a class="navbar-nav mr-2 p-2" href="#knowledge">Knowledge</a>
         <a class="navbar-nav mr-2 p-2" href="#projects">Projects</a>
         <a class="navbar-nav mr-2 p-2" href="#resume">Resume</a>
-        <a class="navbar-nav mr-2 p-2" href="#contact">Contact</a>
       </div>
     </nav>
   </nav>
-  <header class="container">
+  <header class="parallax">
     <!-- hero img and name -->
     <div class="row justify-content-center">
       <div class="hero">
         <div class="hero-image">
           <!-- Hero Image -->
-          <img src="" alt="">
+          <!-- <img src="" alt=""> -->
         </div>
         <h1>Matthew J. Montalto</h1>
         <h2>Software Engineer</h2>
@@ -41,7 +41,7 @@
       </div>
     </div>
   </header>
-  <section class="container-fluid about">
+  <section class="container-fluid about" id="about">
     <div class="row justify-content-center">
       <div class="col titles">
         <h2>About</h2>
@@ -66,7 +66,7 @@
     </div>
   </section>
 
-  <section class="container-fluid skills">
+  <section class="container-fluid skills" id="knowledge">
     <!-- SKills -->
     <div class="row">
       <div class="col titles">
@@ -85,16 +85,16 @@
       </div>
     </article>
   </section>
-  <section class="container-fluid projects">
+  <section class="container-fluid projects" id="projects">
     <div class="row">
       <div class="col titles">
         <h2>Projects</h2>
       </div>
     </div>
     <article class="row justify-content-around">
-      <div class="col-lg-3 col-md-6 col-sm-12 skills">
+      <div class="col-lg-3 col-md-6 col-sm-12 knowledge">
         <div class="card" style="width: 18rem;">
-          <img class="card-img-top" src="..." alt="Card image cap">
+          <img class="card-img-top" src="#" alt="Card image cap">
           <div class="card-body">
             <h5 class="card-title">Tic-Tac-Toe</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -102,9 +102,9 @@
           </div>
         </div>
       </div>
-      <div class="col-lg-3 col-md-6 col-sm-12 skills">
+      <div class="col-lg-3 col-md-6 col-sm-12 knowledge">
         <div class="card" style="width: 18rem;">
-          <img class="card-img-top" src="..." alt="Card image cap">
+          <img class="card-img-top" src="#" alt="Card image cap">
           <div class="card-body">
             <h5 class="card-title">Hot Sauce Recipe Keeper</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -112,9 +112,9 @@
           </div>
         </div>
       </div>
-      <div class="col-lg-3 col-md-6 col-sm-12 skills">
+      <div class="col-lg-3 col-md-6 col-sm-12 knowledge">
         <div class="card" style="width: 18rem;">
-          <img class="card-img-top" src="..." alt="Card image cap">
+          <img class="card-img-top" src="#" alt="Card image cap">
           <div class="card-body">
             <h5 class="card-title">Group Project</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -122,9 +122,9 @@
           </div>
         </div>
       </div>
-      <div class="col-lg-3 col-md-6 col-sm-12 skills">
+      <div class="col-lg-3 col-md-6 col-sm-12 knowledge">
         <div class="card" style="width: 18rem;">
-          <img class="card-img-top" src="..." alt="Card image cap">
+          <img class="card-img-top" src="#" alt="Card image cap">
           <div class="card-body">
             <h5 class="card-title">Capstone Project</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
