Update background and hero images
- Change background image
- upload hero image/headshot

--- a/index.html
+++ b/index.html
@@ -53,11 +53,12 @@
         <button class="btn">Download Resume</button>
       </div>
       <div class="col-md-6 col-sm-12 align-self-center">
-        <p class="about-me my-2">
+        <h3>Hi, I'm Matt...</h3>
+        <p class="my-2">
           I am a software engineer with an eclectic background that spans audio engineering, CRM administration, marketing, and sales. Following a realization that I was seeking out and energized by the most technical aspects of the work I
           performed, I committed myself to a career through which I am able to fully explore my passion for building, creating, and problem-solving.
         </p>
-        <p class="about-me my-2">
+        <p class="my-2">
           My experience has taught me to enjoy collaboration with numerous personalities and how to harness creativity and
           leverage passionate energy. I was taught to value a well-crafted story and to know when listening with an open mind is most important. I view problems as opportunities and value disciplined optimization. As I look ahead, I see boundless opportunity to combine the talents I’ve honed these past years and apply them to developing software that is fun, powerful, useful, and valuable.
         </p>
@@ -74,13 +75,13 @@
       </div>
     </div>
     <article class="row d-flex justify-content-around">
-      <div class="col-md-4 col-sm-12">
+      <div class="col-md-4 col-sm-12 knowledge">
         <h3>Languages and Frameworks</h3>
       </div>
-      <div class="col-md-4 col-sm-12">
+      <div class="col-md-4 col-sm-12 knowledge">
         <h3>Markup and Style</h3>
       </div>
-      <div class="col-md-4 col-sm-12">
+      <div class="col-md-4 col-sm-12 knowledge">
         <h3>Data and Web</h3>
       </div>
     </article>
