--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
   <script src="assets/scripts/index.js" type="text/javascript" charset="utf-8" defer></script>
 </head>
 
-<body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light sticky d-flex justify-content-between">
+<body data-spy="scroll" data-target="#top-nav" data-offset="0">
+    <nav class="nav navbar navbar-expand-lg navbar-light bg-light sticky d-flex justify-content-between" id="top-nav">
       <div>
         <a class="navbar-brand">Matthew J. Montalto</a>
       </div>
       <div class="d-inline-flex">
-        <a class="navbar-nav mr-2 p-2" href="#about">ABOUT</a>
-        <a class="navbar-nav mr-2 p-2" href="#knowledge">KNOWLEDGE</a>
-        <a class="navbar-nav mr-2 p-2" href="#projects">PROJECTS</a>
-        <a class="navbar-nav mr-2 p-2" href="#resume">RESUME</a>
+        <a class="nav-item nav-link navbar-nav mr-2 p-2" href="#about">ABOUT</a>
+        <a class="nav-item nav-link navbar-nav mr-2 p-2" href="#knowledge">KNOWLEDGE</a>
+        <a class="nav-item nav-link navbar-nav mr-2 p-2" href="#projects">PROJECTS</a>
+        <a class="nav-item nav-link navbar-nav mr-2 p-2" href="#resume">RESUME</a>
       </div>
     </nav>
   <header class="container-fluid d-flex justify-content-center align-items-center parallax">
