Responsive nav hamburger
- add hambuger button for mobile
- style hambuger button

- add bootstrap display responsive states to nav elements

--- a/index.html
+++ b/index.html
@@ -21,12 +21,17 @@
       <div>
         <a class="navbar-brand">Matthew J. Montalto</a>
       </div>
-      <div class="d-inline-flex">
+      <div class="d-none d-sm-inline-flex">
         <a class="nav-item nav-link navbar-nav mr-2 p-2" href="#about">ABOUT</a>
         <a class="nav-item nav-link navbar-nav mr-2 p-2" href="#knowledge">KNOWLEDGE</a>
         <a class="nav-item nav-link navbar-nav mr-2 p-2" href="#projects">PROJECTS</a>
         <a class="nav-item nav-link navbar-nav mr-2 p-2" href="#resume">RESUME</a>
       </div>
+      <button class="d-block d-sm-none">
+        <div class="bar1"></div>
+        <div class="bar2"></div>
+        <div class="bar3"></div>
+      </button>
     </nav>
   <header class="container-fluid d-flex justify-content-center align-items-center parallax">
     <div class="row">
