On mobile nav hamburger w/ drop down menu items
- add jquery event listener to animate hamburger on click
- attach bootstrap toggler class to hamburger
- add bootstrap toggle target div
- hide toggle target div on larger screen size

--- a/index.html
+++ b/index.html
@@ -27,11 +27,19 @@
         <a class="nav-item nav-link navbar-nav mr-2 p-2" href="#projects">PROJECTS</a>
         <a class="nav-item nav-link navbar-nav mr-2 p-2" href="#resume">RESUME</a>
       </div>
-      <button class="d-block d-sm-none">
+      <div class="d-block d-sm-none navbar-toggler" data-toggle="collapse" data-target="#navbarToggleExternalContent" id="hamburger">
         <div class="bar1"></div>
         <div class="bar2"></div>
         <div class="bar3"></div>
-      </button>
+      </div>
+      <div class="collapse d-sm-none" id="navbarToggleExternalContent">
+        <div class="bg-light">
+          <a class="nav-item nav-link navbar-nav mr-2 p-2" href="#about">ABOUT</a>
+          <a class="nav-item nav-link navbar-nav mr-2 p-2" href="#knowledge">KNOWLEDGE</a>
+          <a class="nav-item nav-link navbar-nav mr-2 p-2" href="#projects">PROJECTS</a>
+          <a class="nav-item nav-link navbar-nav mr-2 p-2" href="#resume">RESUME</a>
+        </div>
+      </div>
     </nav>
   <header class="container-fluid d-flex justify-content-center align-items-center parallax">
     <div class="row">
