Reorder project listing on mobile
- Add media query and class to flex reverse column layout for projects 2
and 4.
- All projects exhibit same content order.

--- a/index.html
+++ b/index.html
@@ -35,14 +35,6 @@
         <div class="bar2"></div>
         <div class="bar3"></div>
       </div>
-      <div class="collapse d-sm-none" id="navbarToggleExternalContent">
-        <div class="bg-light">
-          <a class="nav-item nav-link navbar-nav mr-2 p-2" href="#about">ABOUT</a>
-          <a class="nav-item nav-link navbar-nav mr-2 p-2" href="#knowledge">KNOWLEDGE</a>
-          <a class="nav-item nav-link navbar-nav mr-2 p-2" href="#projects">PROJECTS</a>
-          <a class="nav-item nav-link navbar-nav mr-2 p-2" href="#resume">RESUME</a>
-        </div>
-      </div>
     </nav>
   <header class="container-fluid d-flex justify-content-center align-items-center parallax">
     <div class="row">
@@ -68,7 +60,7 @@
         <h2>Boston-based Software Engineer</h2>
         <button class="btn">Download Resume</button>
       </div>
-      <div class="col-md-6 col-sm-12 align-self-center">
+      <div class="col-lg-6 col-sm-12 align-self-center">
         <h3>Hi, I'm Matt...</h3>
         <p class="my-2">
           I am a software engineer with an eclectic background that spans audio engineering, CRM administration, marketing, and sales. Following a realization that I was seeking out and energized by the most technical aspects of the work I
@@ -93,6 +85,13 @@
     <article class="row d-flex justify-content-around">
       <div class="col-md-4 col-sm-12 knowledge">
         <h3>Languages and Frameworks</h3>
+        <ul>
+          <li>JavaScript</li>
+          <li>jQuery</li>
+          <li>Node.js</li>
+          <li>Ruby and Ruby on Rails</li>
+          <li></li>
+        </ul>
       </div>
       <div class="col-md-4 col-sm-12 knowledge">
         <h3>Markup and Style</h3>
@@ -110,12 +109,12 @@
     </div>
     <div class="container">
     <div class="row">
-      <div data-aos="slide-up" class="col-md-6 col-sm-12">
+      <div data-aos="slide-up" class="col-lg-6 col-sm-12">
         <!-- project image 1 -->
         <div class="project-logo project1"></div>
         <a class="btn" href="https://matthewjmontalto.github.io/tic-tac-toe/" target="_blank">Play Now</a>
       </div>
-      <div data-aos="slide-up" class="col-md-6 col-sm-12 align-self-center">
+      <div data-aos="slide-up" class="col-lg-6 col-sm-12 align-self-center">
         <h3>Tic-Tac-Toe</h3>
         <p class="my-2">
           Play an online tic-tac-toe game with a partner and keep track
@@ -126,8 +125,8 @@
         </p>
       </div>
     </div>
-    <div class="row">
-      <div data-aos="slide-up" class="col-md-6 col-sm-12 align-self-center">
+    <div class="row content-reorder">
+      <div data-aos="slide-up" class="col-lg-6 col-sm-12 align-self-center">
         <h3>Hot Sauce Recipe Keeper</h3>
         <p class="my-2">
           If you, like so many before you, are wondering how you can keep
@@ -138,18 +137,18 @@
           Technologies used:
         </p>
       </div>
-      <div data-aos="slide-up" class="col-md-6 col-sm-12">
+      <div data-aos="slide-up" class="col-lg-6 col-sm-12">
         <!-- project image 2 -->
         <div class="project-logo project2"></div>
         <a class="btn" href="https://matthewjmontalto.github.io/tic-tac-toe/" target="_blank">Make Some Hot Sauce</a>
       </div>
     </div>
     <div class="row">
-      <div data-aos="slide-up" class="col-md-6 col-sm-12">
+      <div data-aos="slide-up" class="col-lg-6 col-sm-12">
         <div class="project-logo project3"></div>
         <button class="btn">Minimize Shrinkage</button>
       </div>
-      <div data-aos="slide-up" class="col-md-6 col-sm-12 align-self-center">
+      <div data-aos="slide-up" class="col-lg-6 col-sm-12 align-self-center">
         <h3>Power Inventory Management System</h3>
         <p class="my-2">
           A powerful inventory management system for powerful people.
@@ -159,8 +158,8 @@
         </p>
       </div>
     </div>
-    <div class="row">
-      <div data-aos="slide-up" class="col-md-6 col-sm-12 align-self-center">
+    <div class="row content-reorder">
+      <div data-aos="slide-up" class="col-lg-6 col-sm-12 align-self-center">
         <h3>Capstone Project</h3>
         <p class="my-2">
           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias ipsam doloribus, quo expedita sit ipsa harum placeat reiciendis vitae excepturi quibusdam minus soluta veritatis! Odit dignissimos debitis, fugit deleniti voluptates.
@@ -169,10 +168,8 @@
           Technologies used:
         </p>
       </div>
-      <div data-aos="slide-up" class="col-md-6 col-sm-12">
-        <div class="project-logo project4">
-
-        </div>
+      <div data-aos="slide-up" class="col-lg-6 col-sm-12">
+        <div class="project-logo project4"></div>
         <button class="btn">Capstone Away!</button>
       </div>
     </div>
