--- a/index.html
+++ b/index.html
@@ -20,22 +20,22 @@
 </head>
 
 <body data-spy="scroll" data-target="#top-nav" data-offset="0">
-    <nav class="nav navbar navbar-expand-lg navbar-light bg-light sticky d-flex justify-content-between" id="top-nav">
-      <div>
-        <a class="navbar-brand">Matthew J. Montalto</a>
-      </div>
-      <div class="d-none d-sm-inline-flex">
-        <a class="nav-item nav-link navbar-nav mr-2 p-2" href="#about">ABOUT</a>
-        <a class="nav-item nav-link navbar-nav mr-2 p-2" href="#knowledge">KNOWLEDGE</a>
-        <a class="nav-item nav-link navbar-nav mr-2 p-2" href="#projects">PROJECTS</a>
-        <a class="nav-item nav-link navbar-nav mr-2 p-2" href="#resume">RESUME</a>
-      </div>
-      <div class="d-block d-sm-none navbar-toggler" data-toggle="collapse" data-target="#navbarToggleExternalContent" id="hamburger">
-        <div class="bar1"></div>
-        <div class="bar2"></div>
-        <div class="bar3"></div>
-      </div>
-    </nav>
+  <nav class="nav navbar navbar-expand-lg navbar-light bg-light sticky d-flex justify-content-between" id="top-nav">
+    <div>
+      <a class="navbar-brand">Matthew J. Montalto</a>
+    </div>
+    <div class="d-none d-sm-inline-flex">
+      <a class="nav-item nav-link navbar-nav mr-2 p-2" href="#about">ABOUT</a>
+      <a class="nav-item nav-link navbar-nav mr-2 p-2" href="#knowledge">KNOWLEDGE</a>
+      <a class="nav-item nav-link navbar-nav mr-2 p-2" href="#projects">PROJECTS</a>
+      <a class="nav-item nav-link navbar-nav mr-2 p-2" href="#resume">RESUME</a>
+    </div>
+    <div class="d-block d-sm-none navbar-toggler" data-toggle="collapse" data-target="#navbarToggleExternalContent" id="hamburger">
+      <div class="bar1"></div>
+      <div class="bar2"></div>
+      <div class="bar3"></div>
+    </div>
+  </nav>
   <header class="container-fluid d-flex justify-content-center align-items-center parallax">
     <div class="row">
       <div class="hero">
@@ -43,7 +43,7 @@
         <h2>Software Engineer</h2>
         <p>Boston, MA</p>
       </div>
-</div>
+    </div>
   </header>
   <section class="container-fluid about" id="about">
     <div class="row justify-content-center">
@@ -52,26 +52,27 @@
       </div>
     </div>
     <div class="container">
-    <div data-aos="slide-up" class="row">
-      <div class="col-md-6 col-sm-12">
-        <div class="hero-image">
-          <!-- Hero Image -->
+      <div data-aos="slide-up" class="row">
+        <div class="col-lg-6 col-sm-12">
+          <div class="hero-image">
+            <!-- Hero Image -->
+          </div>
+          <h2>Boston-based Software Engineer</h2>
+          <button class="btn">Download Resume</button>
         </div>
-        <h2>Boston-based Software Engineer</h2>
-        <button class="btn">Download Resume</button>
+        <div class="col-lg-6 col-sm-12 align-self-center">
+          <h3>Hi, I'm Matt...</h3>
+          <p class="my-2">
+            I am a software engineer with an eclectic background that spans audio engineering, CRM administration, marketing, and sales. Following a realization that I was seeking out and energized by the most technical aspects of the work I
+            performed, I committed myself to a career through which I am able to fully explore my passion for building, creating, and problem-solving.
+          </p>
+          <p class="my-2">
+            My experience has taught me to enjoy collaboration with numerous personalities and how to harness creativity and
+            leverage passionate energy. I was taught to value a well-crafted story and to know when listening with an open mind is most important. I view problems as opportunities and value disciplined optimization. As I look ahead, I see boundless
+            opportunity to combine the talents I’ve honed these past years and apply them to developing software that is fun, powerful, useful, and valuable.
+          </p>
+        </div>
       </div>
-      <div class="col-lg-6 col-sm-12 align-self-center">
-        <h3>Hi, I'm Matt...</h3>
-        <p class="my-2">
-          I am a software engineer with an eclectic background that spans audio engineering, CRM administration, marketing, and sales. Following a realization that I was seeking out and energized by the most technical aspects of the work I
-          performed, I committed myself to a career through which I am able to fully explore my passion for building, creating, and problem-solving.
-        </p>
-        <p class="my-2">
-          My experience has taught me to enjoy collaboration with numerous personalities and how to harness creativity and
-          leverage passionate energy. I was taught to value a well-crafted story and to know when listening with an open mind is most important. I view problems as opportunities and value disciplined optimization. As I look ahead, I see boundless opportunity to combine the talents I’ve honed these past years and apply them to developing software that is fun, powerful, useful, and valuable.
-        </p>
-      </div>
-    </div>
     </div>
   </section>
 
@@ -108,71 +109,85 @@
       </div>
     </div>
     <div class="container">
-    <div class="row">
-      <div data-aos="slide-up" class="col-lg-6 col-sm-12">
-        <!-- project image 1 -->
-        <div class="project-logo project1"></div>
-        <a class="btn" href="https://matthewjmontalto.github.io/tic-tac-toe/" target="_blank">Play Now</a>
+      <div class="row">
+        <div data-aos="slide-up" class="col-lg-6 col-sm-12">
+          <!-- project image 1 -->
+          <div class="project-logo project1"></div>
+        </div>
+        <div data-aos="slide-up" class="col-lg-6 col-sm-12 align-self-center">
+          <h3>Tic-Tac-Toe</h3>
+          <p class="my-2">
+            Play an online tic-tac-toe game against a partner. The game client
+            communicates with a rails-based API to track player progress. Play to
+            your heart's content and Keep track of your wins and losses over
+            time by establishing a player account.
+          </p>
+          <p class="my-2">
+            <strong>Technologies used</strong>: HTML, SCSS, Bootstrap, JavaScript, and jQuery.
+          </p>
+          <a class="btn btn-outline-dark mx-1 my-2" href="https://matthewjmontalto.github.io/tic-tac-toe/" target="_blank">Play Now</a>
+          <a class="btn btn-outline-dark mx-1 my-2" href="https://github.com/matthewjmontalto/tic-tac-toe" target="_blank">View the Repo</a>
+        </div>
       </div>
-      <div data-aos="slide-up" class="col-lg-6 col-sm-12 align-self-center">
-        <h3>Tic-Tac-Toe</h3>
-        <p class="my-2">
-          Play an online tic-tac-toe game with a partner and keep track
-          of wins and losses over time by establishing your player account.
-        </p>
-        <p class="my-2">
-          Technologies used:
-        </p>
+      <div class="row content-reorder">
+        <div data-aos="slide-up" class="col-lg-6 col-sm-12 align-self-center">
+          <h3>Hot Sauce Recipe Keeper</h3>
+          <p class="my-2">
+            If you are wondering how you can keep
+            track of your ever-growing list of hot sauce recipes, look no further!
+            Build and maintain your library of recipes with a mobile-friendly
+            application designed specifically for hot sauce.
+          </p>
+          <p class="my-2">
+            <strong>Technologies used</strong>: HTML, SCSS, Bootstrap,
+            Javascript, jQuery, Handlebars.js, Ruby on Rails, Heroku.
+          </p>
+          <a class="btn btn-outline-dark mx-1 my-2" href="https://matthewjmontalto.github.io/hot-sauce-recipe-tracker-client/" target="_blank">Make Some Hot Sauce</a>
+          <a class="btn btn-outline-dark mx-1 my-2" href="https://github.com/matthewjmontalto/hot-sauce-recipe-tracker-client" target="_blank">View the Repo</a>
+        </div>
+        <div data-aos="slide-up" class="col-lg-6 col-sm-12">
+          <!-- project image 2 -->
+          <div class="project-logo project2"></div>
+        </div>
       </div>
-    </div>
-    <div class="row content-reorder">
-      <div data-aos="slide-up" class="col-lg-6 col-sm-12 align-self-center">
-        <h3>Hot Sauce Recipe Keeper</h3>
-        <p class="my-2">
-          If you, like so many before you, are wondering how you can keep
-          track of your countless hot sauce recipes, look no further!
-          Track your recipes in one location, online!
-        </p>
-        <p class="my-2">
-          Technologies used:
-        </p>
+      <div class="row">
+        <div data-aos="slide-up" class="col-lg-6 col-sm-12">
+          <div class="project-logo project3"></div>
+        </div>
+        <div data-aos="slide-up" class="col-lg-6 col-sm-12 align-self-center">
+          <h3>Power Inventory Management System</h3>
+          <p class="my-2">
+            A powerful inventory management system for powerful people. With a
+            back-end powered by a NoSQL database, Power Inventory offers
+            flexibility and scalability to suit the needs of power users.
+          </p>
+          <p class="my-2">
+            Technologies used: HTML, SCSS, Bootstrap, JavaScript, jQuery,
+            Handlebars.js, Node.js, MongoDB, Mongoose, Express.js, and Heroku.
+          </p>
+          <a class="btn btn-outline-dark mx-1 my-2" href="#" target="_blank">Manage Your Inventory</a>
+          <a class="btn btn-outline-dark mx-1 my-2" href="https://github.com/matthewjmontalto/inventory-manager-client" target="_blank">View the Repo</a>
+        </div>
       </div>
-      <div data-aos="slide-up" class="col-lg-6 col-sm-12">
-        <!-- project image 2 -->
-        <div class="project-logo project2"></div>
-        <a class="btn" href="https://matthewjmontalto.github.io/tic-tac-toe/" target="_blank">Make Some Hot Sauce</a>
+      <div class="row content-reorder">
+        <div data-aos="slide-up" class="col-lg-6 col-sm-12 align-self-center">
+          <h3>Pomodoro Task Tracker</h3>
+          <p class="my-2">
+            Increase your productivity with a simple-to-use task tracker that
+            has a built-in <a href="https://en.wikipedia.org/wiki/Pomodoro_Technique" target="_blank">pomodoro timer</a>.
+            Conquer your to-do's in a structured format and stay focused
+            through-out your process.
+          </p>
+          <p class="my-2">
+            Technologies used: HTML, SCSS, React-Bootstrap, React JS, Heroku, and Ruby on Rails.
+          </p>
+          <a class="btn btn-outline-dark mx-1 my-2" href="https://matthewjmontalto.github.io/capstone-pomodoro-tracker-client-redeploy/#/" target="_blank">Start Tracking</a>
+          <a class="btn btn-outline-dark mx-1 my-2" href="https://github.com/matthewjmontalto/capstone-pomodoro-tracker-client-redeploy" target="_blank">View the Repo</a>
+        </div>
+        <div data-aos="slide-up" class="col-lg-6 col-sm-12">
+          <div class="project-logo project4"></div>
+        </div>
       </div>
-    </div>
-    <div class="row">
-      <div data-aos="slide-up" class="col-lg-6 col-sm-12">
-        <div class="project-logo project3"></div>
-        <button class="btn">Minimize Shrinkage</button>
-      </div>
-      <div data-aos="slide-up" class="col-lg-6 col-sm-12 align-self-center">
-        <h3>Power Inventory Management System</h3>
-        <p class="my-2">
-          A powerful inventory management system for powerful people.
-        </p>
-        <p class="my-2">
-          Technologies used:
-        </p>
-      </div>
-    </div>
-    <div class="row content-reorder">
-      <div data-aos="slide-up" class="col-lg-6 col-sm-12 align-self-center">
-        <h3>Capstone Project</h3>
-        <p class="my-2">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias ipsam doloribus, quo expedita sit ipsa harum placeat reiciendis vitae excepturi quibusdam minus soluta veritatis! Odit dignissimos debitis, fugit deleniti voluptates.
-        </p>
-        <p class="my-2">
-          Technologies used:
-        </p>
-      </div>
-      <div data-aos="slide-up" class="col-lg-6 col-sm-12">
-        <div class="project-logo project4"></div>
-        <button class="btn">Capstone Away!</button>
-      </div>
-    </div>
     </div>
 
   </section>
@@ -189,7 +204,9 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
   <!-- animate on scroll script -->
   <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
- <script>AOS.init();</script>
+  <script>
+    AOS.init();
+  </script>
 </body>
 
 </html>
