--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
   <!-- animate on scroll -->
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 
+  <!-- Devicon Fonts -->
+  <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
+
   <!-- native styles -->
   <link href="assets/styles/main.css" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans|Raleway" rel="stylesheet">
@@ -76,29 +79,70 @@
     </div>
   </section>
 
-  <section class="container-fluid" id="knowledge">
+  <section class="container-fluid">
     <!-- SKills -->
     <div class="row">
       <div class="col titles">
         <h2>Technologies</h2>
       </div>
     </div>
-    <article class="row d-flex justify-content-around">
-      <div class="col-md-4 col-sm-12 knowledge">
-        <h3>Languages and Frameworks</h3>
-        <ul>
-          <li>JavaScript</li>
-          <li>jQuery</li>
-          <li>Node.js</li>
-          <li>Ruby and Ruby on Rails</li>
-          <li></li>
-        </ul>
+    <article class="row devicon-list">
+      <div data-aos="slide-up">
+        <i class="col-lg-2 col-sm-6 devicon-html5-plain-wordmark"></i>
       </div>
-      <div class="col-md-4 col-sm-12 knowledge">
-        <h3>Markup and Style</h3>
+      <div data-aos="slide-up">
+        <i class="col-lg-2 col-sm-6 devicon-css3-plain-wordmark"></i>
       </div>
-      <div class="col-md-4 col-sm-12 knowledge">
-        <h3>Data and Web</h3>
+      <div data-aos="slide-up">
+        <i class="col-lg-2 col-sm-6 devicon-sass-original"></i>
+      </div>
+      <div data-aos="slide-up">
+        <i class="col-lg-2 col-sm-6 devicon-bootstrap-plain"></i>
+      </div>
+      <div data-aos="slide-up">
+        <i class="col-lg-2 col-sm-6 devicon-javascript-plain"></i>
+      </div>
+      <div data-aos="slide-up">
+        <i class="col-lg-2 col-sm-6 devicon-react-original"></i>
+      </div>
+      <div data-aos="slide-up">
+        <i class="col-lg-2 col-sm-6 devicon-nodejs-plain"></i>
+      </div>
+      <div data-aos="slide-up">
+        <i class="col-lg-2 col-sm-6 devicon-jquery-plain-wordmark"></i>
+      </div>
+      <div data-aos="slide-up">
+        <i class="col-lg-2 col-sm-6 devicon-postgresql-plain-wordmark"></i>
+      </div>
+      <div data-aos="slide-up">
+        <i class="col-lg-2 col-sm-6 devicon-rails-plain-wordmark"></i>
+      </div>
+      <div data-aos="slide-up">
+        <i class="col-lg-2 col-sm-6 devicon-ruby-plain-wordmark"></i>
+      </div>
+      <div data-aos="slide-up">
+        <i class="col-lg-2 col-sm-6 devicon-mongodb-plain-wordmark"></i>
+      </div>
+      <div data-aos="slide-up">
+        <i class="col-lg-2 col-sm-6 devicon-express-original-wordmark"></i>
+      </div>
+      <div data-aos="slide-up">
+        <i class="col-lg-2 col-sm-6 devicon-mysql-plain-wordmark"></i>
+      </div>
+      <div data-aos="slide-up">
+        <i class="col-lg-2 col-sm-6 devicon-grunt-line-wordmark"></i>
+      </div>
+      <div data-aos="slide-up">
+        <i class="col-lg-2 col-sm-6 devicon-amazonwebservices-original"></i>
+      </div>
+      <div data-aos="slide-up">
+        <i class="col-lg-2 col-sm-6 devicon-heroku-line-wordmark"></i>
+      </div>
+      <div data-aos="slide-up">
+        <i class="col-lg-2 col-sm-6 devicon-github-plain-wordmark"></i>
+      </div>
+      <div data-aos="slide-up">
+        <i class="col-lg-2 col-sm-6 devicon-git-plain"></i>
       </div>
     </article>
   </section>
