Fix navigation to Knowledge

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     </div>
   </section>
 
-  <section class="container-fluid">
+  <section class="container-fluid" id="knowledge">
     <!-- SKills -->
     <div class="row">
       <div class="col titles">
