--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <!-- bootstrap css -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
   <!-- animate on scroll -->
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
@@ -23,22 +23,38 @@
 </head>
 
 <body data-spy="scroll" data-target="#top-nav" data-offset="0">
-  <nav class="nav navbar navbar-expand-lg navbar-light bg-light sticky d-flex justify-content-between" id="top-nav">
-    <div>
-      <a class="navbar-brand">Matthew J. Montalto</a>
-    </div>
-    <div class="d-none d-sm-inline-flex">
-      <a class="nav-item nav-link navbar-nav mr-2 p-2" href="#about">ABOUT</a>
-      <a class="nav-item nav-link navbar-nav mr-2 p-2" href="#knowledge">KNOWLEDGE</a>
-      <a class="nav-item nav-link navbar-nav mr-2 p-2" href="#projects">PROJECTS</a>
-      <a class="nav-item nav-link navbar-nav mr-2 p-2" href="#resume">RESUME</a>
-    </div>
-    <div class="d-block d-sm-none navbar-toggler" data-toggle="collapse" data-target="#navbarToggleExternalContent" id="hamburger">
-      <div class="bar1"></div>
-      <div class="bar2"></div>
-      <div class="bar3"></div>
-    </div>
+  <nav class="shadow-sm navbar navbar-expand-lg sticky navbar-light bg-light" id="top-nav">
+      <div class="d-flex flex-grow-1">
+          <a class="navbar-brand d-lg-inline-block" href="#">
+              Matthew J. Montalto
+          </a>
+          <div class="w-100"></div>
+          <div class="text-right">
+            <div class="navbar-toggler" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation" id="hamburger">
+              <div class="bar1"></div>
+              <div class="bar2"></div>
+              <div class="bar3"></div>
+            </div>
+          </div>
+      </div>
+      <div class="collapse navbar-collapse flex-grow-1 text-right" id="navbarToggler">
+          <ul class="navbar-nav ml-auto flex-nowrap">
+            <li class="nav-item">
+              <a class="nav-link mr-2 p-2" href="#about">ABOUT</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link mr-2 p-2" href="#knowledge">KNOWLEDGE</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link mr-2 p-2" href="#projects">PROJECTS</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link mr-2 p-2" href="#resume">RESUME</a>
+            </li>
+          </ul>
+      </div>
   </nav>
+
   <header class="container-fluid d-flex justify-content-center align-items-center parallax">
     <div class="row">
       <div class="hero">
@@ -83,7 +99,7 @@
     <!-- SKills -->
     <div class="row">
       <div class="col titles">
-        <h2>Technologies</h2>
+        <h2>Technology</h2>
       </div>
     </div>
     <article class="row devicon-list">
@@ -243,9 +259,9 @@
     </div>
   </footer>
   <!-- bootstrap scripting libraries -->
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   <!-- animate on scroll script -->
   <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
   <script>
