--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
               <a class="nav-link mr-2 p-2" href="#projects">PROJECTS</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link mr-2 p-2" href="#resume">RESUME</a>
+              <a class="nav-link mr-2 p-2" href="https://drive.google.com/file/d/1DU9DrSeROm74QIs-gp__QEnENFqLv-FB/view?usp=sharing" target="_blank">RESUME</a>
             </li>
           </ul>
       </div>
@@ -77,7 +77,7 @@
             <!-- Hero Image -->
           </div>
           <h2>Boston-based Software Engineer</h2>
-          <button class="btn">Download Resume</button>
+            <a class="btn btn-outline-dark mx-1 my-3" href="https://drive.google.com/file/d/1DU9DrSeROm74QIs-gp__QEnENFqLv-FB/view?usp=sharing" target="_blank">View My Resume</a>
         </div>
         <div class="col-lg-6 col-sm-12 align-self-center">
           <h3>Hi, I'm Matt...</h3>
@@ -255,7 +255,7 @@
     <div class="d-inline-flex">
       <a class="navbar-nav mr-2 p-2" href="https://www.linkedin.com/in/matthew-j-montalto/" target="_blank">LinkedIn</a>
       <a class="navbar-nav mr-2 p-2" href="https://github.com/matthewjmontalto" target="_blank">Github</a>
-      <a class="navbar-nav mr-2 p-2" href="#resume">Contact Me</a>
+      <a class="navbar-nav mr-2 p-2" href="https://drive.google.com/file/d/1DU9DrSeROm74QIs-gp__QEnENFqLv-FB/view?usp=sharing" target="_blank">Contact Me</a>
     </div>
   </footer>
   <!-- bootstrap scripting libraries -->
