Update Proj Assets
- add new photo
- link to deployed application

--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
             Technologies used: HTML, SCSS, Bootstrap, JavaScript, jQuery,
             Handlebars.js, Node.js, MongoDB, Mongoose, Express.js, and Heroku.
           </p>
-          <a class="btn btn-outline-dark mx-1 my-2" href="#" target="_blank">Manage Your Inventory</a>
+          <a class="btn btn-outline-dark mx-1 my-2" href="https://cdhm-ga.github.io/inventory-manager-client/" target="_blank">Manage Your Inventory</a>
           <a class="btn btn-outline-dark mx-1 my-2" href="https://github.com/matthewjmontalto/inventory-manager-client" target="_blank">View the Repo</a>
         </div>
       </div>
